# neurosama-ai

./: .env.example  .gitignore  AGENTS.md  README.ja.md  README.ko.md  README.md  ROADMAP.md  WORKSPACE.md  checklist.md  context-notes.md
.github/workflows/: claude-auto-merge.yml  claude-fix-review.yml
.meridian/docs/: memory-system.md  pipeline-architecture.md
.meridian/plans/: neru-mvp-voice-core.md
.superpowers/sdd/: final-fix-report.md  task-4-report.md
airi/: .npmrc  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
airi/apps/stage-tamagotchi/: package.json
airi/scripts/: ensure-electron.mjs
airi/services/neru-audio/: README.md  pyproject.toml
airi/services/neru-audio/neru_audio/: app.py  config.py  gpu.py  tts.py
backend/: pyproject.toml
backend/assets/voices/: neuro_ref.txt
backend/scripts/: probe_avatar.py  probe_llm.py  probe_stt.py  probe_tts.py
backend/src/neru/: __init__.py  config.py  events.py  main.py  orchestrator.py  persona.py  sink.py  sinks_console.py
backend/src/neru/avatar/: __init__.py  base.py  logging_avatar.py  vtube_studio.py
backend/src/neru/bridge/: __init__.py  openai_audio.py
backend/src/neru/llm/: __init__.py  base.py  claude.py  echo.py
backend/src/neru/stt/: __init__.py  base.py  scripted.py  whisper_local.py
backend/src/neru/tts/: __init__.py  base.py  chatterbox_local.py  silent.py
backend/tests/: test_avatar_vtube.py  test_orchestrator.py  test_stt_provider.py
docs/superpowers/plans/: 2026-07-09-neru-airi-integration.md  2026-07-10-neru-bilingual-output.md  2026-07-14-neru-witch-avatar-render.md  2026-07-15-neru-barge-in.md  2026-07-15-neru-witch-emotion-expression.md  2026-07-16-neru-long-term-memory.md  2026-07-17-neru-web-search.md  2026-07-18-neru-proactive-speech.md  2026-07-19-codex-meridian-port.md  2026-07-19-codex-personal-migration.md  2026-07-19-codex-project-context.md  2026-07-19-neru-codex-oauth-provider.md  2026-07-19-neru-landing-page.md  2026-07-20-codex-cli-unsupported-diagnosis.md  2026-07-20-neru-codex-runtime-settings.md  2026-07-20-neru-render-performance.md  2026-07-23-neru-direct-codex-oauth.md  2026-07-24-chat-fresh-session.md  2026-07-24-codex-remote-model-refresh.md
docs/superpowers/specs/: 2026-07-09-neru-airi-integration-design.md  2026-07-10-neru-bilingual-output-design.md  2026-07-14-neru-witch-avatar-render-design.md  2026-07-15-neru-barge-in-design.md  (+14 more)
frontend/: index.html  package-lock.json  package.json
frontend/electron/: main.cjs  preload.cjs
frontend/src/: main.ts  settings.ts  style.css
infra/searxng/: README.md  docker-compose.yml  settings.yml
site/: README.md  package-lock.json  package.json
site/app/: NeruLanding.tsx  globals.css  i18n.d.ts  i18n.mjs  layout.tsx  page.tsx
site/tests/: i18n.test.mjs  rendered-html.test.mjs
site/worker/: index.ts
(+62 files in other folders)
