[project]
name = "neru-audio"
version = "0.1.0"
description = "neru local GPU audio gateway (OpenAI-compatible STT+TTS) for AIRI"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "chatterbox-tts>=0.1.7",
    "faster-whisper>=1.2",
    "setuptools<81",
    "numba>=0.61",
    "numpy<2",
]

[project.scripts]
neru-audio = "neru_audio.app:main"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
override-dependencies = ["torch==2.9.0+cu128", "torchaudio==2.9.0+cu128"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neru_audio"]
